--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -7,6 +7,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_game"
-        tools:context=".GameActivity">
+        tools:context=".activities.GameActivity">
 
 </android.support.constraint.ConstraintLayout>
