search game screen designed

--- a/app/src/main/res/layout/activity_search_game.xml
+++ b/app/src/main/res/layout/activity_search_game.xml
@@ -5,6 +5,31 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         tools:context=".activities.SearchGameActivity">
+
+    <TextView
+            android:id="@+id/textViewLoading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="@string/search_game_loading"
+            app:layout_constraintBottom_toTopOf="@id/progressBarSearchGames"
+            app:layout_constraintEnd_toEndOf="@id/progressBarSearchGames"
+            app:layout_constraintStart_toStartOf="@id/progressBarSearchGames"/>
+
+    <ProgressBar
+            android:id="@+id/progressBarSearchGames"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
