Animations added to loading game

--- a/app/src/main/res/layout/activity_search_game.xml
+++ b/app/src/main/res/layout/activity_search_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -27,35 +27,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+            <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animation_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:lottie_fileName="game_loading.json"
+                    app:lottie_loop="true"
+                    app:lottie_autoPlay="true"/>
+
             <TextView
                     android:id="@+id/textViewLoading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
-                    android:text="@string/search_game_loading"
-                    app:layout_constraintBottom_toTopOf="@id/progressBarSearchGames"
-                    app:layout_constraintEnd_toEndOf="@id/progressBarSearchGames"
-                    app:layout_constraintStart_toStartOf="@id/progressBarSearchGames"/>
+                    android:text="@string/search_game_loading"/>
 
             <ProgressBar
                     android:id="@+id/progressBarSearchGames"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="0dp"
+                    android:indeterminate="true"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    android:layout_marginBottom="8dp"/>
+
         </LinearLayout>
 
     </ScrollView>
 
     <ScrollView
-            android:id="@+id/gameMenu"
+            android:id="@+id/layoutGameMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -93,10 +99,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:backgroundTint="@color/colorAccent"
-                    android:drawableLeft="ic_rank"
+                    android:drawableLeft="@drawable/ic_rank"
                     android:padding="16dp"
                     android:text="@string/search_game_button_ranking"/>
         </LinearLayout>
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
