Change selected cell

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,6 +12,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="8"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toBottomOf="@id/imageView7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -26,6 +27,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp"
             android:tag="7"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView8"
             app:layout_constraintHorizontal_bias="0.5"
@@ -38,6 +40,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="6"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toBottomOf="@+id/imageView7"
             app:layout_constraintEnd_toStartOf="@+id/imageView7"
             app:layout_constraintHorizontal_bias="0.5"
@@ -50,6 +53,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="2"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toBottomOf="@+id/imageView1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -63,6 +67,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="24dp"
             android:tag="4"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toTopOf="@+id/imageView7"
             app:layout_constraintEnd_toStartOf="@+id/imageView5"
             app:layout_constraintHorizontal_bias="0.5"
@@ -75,6 +80,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="3"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
             app:layout_constraintEnd_toStartOf="@+id/imageView4"
             app:layout_constraintHorizontal_bias="0.5"
@@ -125,6 +131,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="0"
+            android:onClick="selectedCell"
             app:layout_constraintEnd_toStartOf="@+id/imageView1"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -137,6 +144,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="1"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toTopOf="@+id/imageView4"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -150,6 +158,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:tag="5"
+            android:onClick="selectedCell"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
