--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#4CAF50</color>
     <color name="colorAccent">#ffd04a</color>
     <color name="colorBackgroundSquare">#DADADA</color>
+    <color name="colorOtherPlaying">#8f8f8f</color>
 </resources>
